# EncrypT

./: CMakeLists.txt  LICENSE  README.md
include/client/: ChatClient.hpp  ClientApp.hpp
include/common/: Singleton.hpp
include/message/: ChatMessage.hpp
include/server/: ChatMessage.hpp  ChatServer.hpp  Serializer.hpp
src/: main.cpp
src/client/: ChatClient.cpp  ClientApp.cpp
src/message/: ChatMessage.cpp
src/server/: ChatMessage.cpp  ChatServer.cpp  Serialiser.cpp
